fixed navbar__collapse overflow-hidden on expanded

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -155,6 +155,7 @@
                         max-height: 100%;
                         width: fit-content;
                         flex-direction: row;
+                        overflow: unset;
                     }
 
                     .navbar__li {
